Фикс getFirst()